[gd_scene load_steps=19 format=3 uid="uid://cghu1j6nfwgyo"]

[ext_resource type="Script" uid="uid://cimopytyauklq" path="res://Scripts/Player3.gd" id="1_cdwr3"]
[ext_resource type="Texture2D" uid="uid://sxtvq3hjog0h" path="res://characters/Player_3/justaguy_3.png" id="2_n8ado"]
[ext_resource type="Texture2D" uid="uid://dy7ybmd1hfkrh" path="res://characters/Player_3/justaguyWALKIN_3.png" id="3_b2v8x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nor0l"]
atlas = ExtResource("2_n8ado")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkb10"]
atlas = ExtResource("2_n8ado")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nq7j"]
atlas = ExtResource("2_n8ado")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_yusl7"]
atlas = ExtResource("2_n8ado")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bimxk"]
atlas = ExtResource("2_n8ado")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_was31"]
atlas = ExtResource("2_n8ado")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn757"]
atlas = ExtResource("3_b2v8x")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6uea"]
atlas = ExtResource("3_b2v8x")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gmio"]
atlas = ExtResource("3_b2v8x")
region = Rect2(0, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiasm"]
atlas = ExtResource("3_b2v8x")
region = Rect2(256, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6n3i"]
atlas = ExtResource("3_b2v8x")
region = Rect2(512, 256, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_g83f7"]
atlas = ExtResource("3_b2v8x")
region = Rect2(0, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy40b"]
atlas = ExtResource("3_b2v8x")
region = Rect2(256, 512, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci5wk"]
atlas = ExtResource("3_b2v8x")
region = Rect2(512, 512, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_25qrt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nor0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkb10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nq7j")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yusl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bimxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_was31")
}],
"loop": true,
"name": &"IdleAlt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn757")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6uea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gmio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiasm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6n3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g83f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy40b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci5wk")
}],
"loop": true,
"name": &"Moving",
"speed": 5.0
}]

[node name="Player3" type="Node2D"]
scale = Vector2(0.05, 0.05)
script = ExtResource("1_cdwr3")

[node name="UI" type="Control" parent="."]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 1.52588e-05
offset_right = 100.0
offset_bottom = 100.0

[node name="Button" type="Button" parent="UI"]
layout_mode = 0
offset_left = 200.0
offset_top = -100.0
offset_right = 480.0
offset_bottom = 40.0
text = "Roll Dice"

[node name="Button2" type="Button" parent="UI"]
layout_mode = 0
offset_left = 200.0
offset_top = 50.0
offset_right = 480.0
offset_bottom = 190.0
text = "Use Stamina
"

[node name="SpinBox" type="SpinBox" parent="UI"]
custom_minimum_size = Vector2(240, 140)
layout_mode = 0
offset_left = 200.0
offset_top = 50.0
offset_right = 470.0
offset_bottom = 190.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_25qrt")
animation = &"Idle"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.98, 2.98)

[connection signal="pressed" from="UI/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="UI/Button2" to="." method="_on_use_stamina_pressed"]
